Assignment12/src/objects/Archive_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Archive Config</label>
    <pluralLabel>Archive Configs</pluralLabel>
</CustomObject>